# napari-imaris

./: .copier-answers.yml  LICENSE  README.md  environment.yml  minimal_test.py  napari-imaris_envrionment.yml  napari.yaml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
images/: CellDevelopment-time_series3D.ims  MULTI_IMAGE-2D.ims  Microglia-vasculature_with_objects.ims  NMLNP001-AN3_[ii0_AN3-L_Merged_Image_1].ims  NMLNP001-AN4_[ii3_AN4-R_Merged_Image_4].ims  NMLNP001-AN6.ims  NMLNP001-AN7_[ii4_Image003_Image_5].ims  NeuronDemo_with_objects.ims  SwimmingAlgae.ims  SwimmingAlgae_with_objects-time_series2D.ims  celldemo.ims
napari_imaris/: __init__.py  benchmark_script.py  debug-basic.py  debug-steps1-2-3-4.py  debug-steps1-2-3.py  debug.py  gpu_benchmark_10GB_live.csv  really_buggy.py  widget.py  working_dask.py  working_image_pyramid.py  working_image_pyramid_dask.py
src/napari_imaris/: napari.yaml
src/napari_imaris/_tests/: test_reader.py  test_widget.py  test_writer.py
