[metadata]
name = napari-imaris
version = 0.1.0
description = Napari plugin to read Imaris (.ims) files with lazy loading.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = BSD-3-Clause
keywords = napari, ims, imaris, lazy-loading
classifiers =
    Framework :: Napari
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.9
install_requires =
    napari>=0.6.0
    dask
    imaris-ims-file-reader

[options.entry_points]
napari.commands =
    read_ims = napari_imaris.reader:ImarisPyramidReader
